...
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/rows_employee_items"
/>

    <Button
        android:id="@+id/button_add_employee"
        android:layout_width="71dp"
        android:layout_height="53dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="addEmployee"
        android:drawableEnd="@drawable/baseline_add_25"
...
