...
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/fragment_container1"
        app:layout_constraintVertical_bias="0.38"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:ignore="HardcodedText,UnknownIdInLayout"
        android:id="@+id/imageViewVisitor"/>

    <Button
        android:id="@+id/button_search_employee_visitor"
        android:layout_width="78dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
...
